--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,19 +2,19 @@
 # important settings can be changed from the admin interface.
 
 defaults: &defaults
-  site_title: 'Mastodon Glitch Edition'
-  site_short_description: ''
-  site_description: ''
-  site_extended_description: ''
-  site_terms: ''
-  site_contact_username: ''
-  site_contact_email: ''
-  registrations_mode: 'open'
+  site_title: "dongongo.com"
+  site_short_description: ""
+  site_description: ""
+  site_extended_description: ""
+  site_terms: ""
+  site_contact_username: ""
+  site_contact_email: ""
+  registrations_mode: "open"
   profile_directory: true
-  closed_registrations_message: ''
+  closed_registrations_message: ""
   open_deletion: true
   timeline_preview: false
-  min_invite_role: 'admin'
+  min_invite_role: "admin"
   show_staff_badge: true
   default_sensitive: false
   hide_network: false
@@ -23,7 +23,7 @@ defaults: &defaults
   favourite_modal: false
   delete_modal: true
   auto_play_gif: false
-  display_media: 'default'
+  display_media: "default"
   expand_spoilers: false
   preview_sensitive_media: false
   reduce_motion: false
@@ -34,8 +34,8 @@ defaults: &defaults
   noindex: false
   hide_followers_count: false
   enable_keybase: true
-  flavour: 'glitch'
-  skin: 'default'
+  flavour: "glitch"
+  skin: "space"
   aggregate_reblogs: true
   advanced_layout: false
   use_blurhash: true
@@ -68,17 +68,17 @@ defaults: &defaults
     - moderator
   disallowed_hashtags: # space separated string or list of hashtags without the hash
   enable_bootstrap_timeline_accounts: true
-  bootstrap_timeline_accounts: ''
+  bootstrap_timeline_accounts: ""
   activity_api_enabled: true
   peers_api_enabled: true
   show_known_fediverse_at_about_page: true
   show_reblogs_in_public_timelines: false
   show_replies_in_public_timelines: false
-  default_content_type: 'text/plain'
+  default_content_type: "text/plain"
   spam_check_enabled: true
-  show_domain_blocks: 'disabled'
-  show_domain_blocks_rationale: 'disabled'
-  outgoing_spoilers: ''
+  show_domain_blocks: "disabled"
+  show_domain_blocks_rationale: "disabled"
+  outgoing_spoilers: ""
   require_invite_text: false
 
 development:
