--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,6 +217,8 @@ jobs:
   push:
     machine:
       image: ubuntu-2004:202101-01
+      docker_layer_caching: true
+    resource_class: xlarge
     environment:
       BUILDX_PLATFORMS: linux/amd64,linux/arm64
     steps:
