--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,23 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Stop Docker
+          command: sudo systemctl stop docker
+      - restore_cache:
+          keys:
+            - v1-docker-cache-{{ checksum "Dockerfile" }}
+            - v1-docker-cache-
+      - run:
+          name: Start Docker
+          command: sudo systemctl start Docker
+      - run:
+          name: Install yarn dependencies
+          command: yarn install --frozen-lockfile
+      - save_cache:
+          key: v2-node-dependencies-{{ checksum "yarn.lock" }}
+          paths:
+            - ./node_modules/
+      - run:
           name: Configure Docker Authn
           command: |-
             base64 -d <<< "${GCLOUD_SERVICE_ACCOUNT}" | docker login \
@@ -252,6 +269,13 @@ jobs:
           name: Build and Push Docker Image
           no_output_timeout: 1h
           command: docker buildx build --progress=plain --platform "$BUILDX_PLATFORMS" --push -t us-docker.pkg.dev/triton-ops/jaredallard-home/mastodon .
+      - run:
+          name: Stop Docker
+          command: sudo systemctl stop docker
+      - save_cache:
+          paths:
+            - /var/lib/docker
+          key: v1-docker-cache-{{ checksum "Dockerfile" }}
 
 workflows:
   version: 2
